--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Bhartesh Kaushik's Portfolio - Software Development Engineer">
     <meta name="keywords" content="Bhartesh Kaushik, Portfolio, Software Developer, React, Node.js">
     <meta name="author" content="Bhartesh Kaushik">
-    <title>Bhartesh Kaushik - Terminal Portfolio</title>
+    <title>Bhartesh Kaushik</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/components/terminal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
